# game.libretro.beetle-vb

depends/common/beetle-vb/: CMakeLists.txt
game.libretro.beetle-vb/: addon.xml.in  service.py
game.libretro.beetle-vb/resources/: settings.xml
game.libretro.beetle-vb/resources/language/English/: strings.po
